--- a/Minesweeper/MainWindow.xaml
+++ b/Minesweeper/MainWindow.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Minesweeper"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
+        Title="MainWindow" Height="450" Width="600"
         Style="{StaticResource MaterialDesignWindow}"
-        SizeToContent="WidthAndHeight" MinWidth="400" MinHeight="300">
+        SizeToContent="WidthAndHeight" MinWidth="600" MinHeight="450"
+        Loaded="MainWindow_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -24,8 +25,6 @@
                    Margin="0,0,0,20"/>
 
         <StackPanel Grid.Row="2" 
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
                     Margin="0,0,0,20">
             <TextBlock Text="Difficulty"
                        FontSize="18"
@@ -44,5 +43,20 @@
                 Height="60"
                 HorizontalAlignment="Center"
                 Click="Button_Click"/>
+
+        <StackPanel Grid.Row="4" Margin="15" HorizontalAlignment="Right">
+            <Label x:Name="LblUser"
+               Content="Not logged in"
+               FontSize="16"
+               HorizontalAlignment="Center"
+               Margin="0,10,0,0"/>
+            <Button x:Name="BtnLogin" 
+                Content="Login" 
+                Width="100" 
+                Height="40"
+                FontSize="18"
+                HorizontalAlignment="Center" 
+                Click="BtnLogin_Click" />
+        </StackPanel>
     </Grid>
 </Window>
